set authorizedOwners to wildcard

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 			//-------------------------------------------------------------------------------------------
 			var configOptions = {
 				// Enter an application ID created through the Map Journal builder
-				appid: "e64a7303aff74f2e83454e6baf35651a",
+				appid: "",
 				// Optionally to secure Journal's access, use an OAuth application ID (example: 6gyOg377fLUhUk6f)
 				// User will need to sign-in to access the viewer even if your application is public
 				oAuthAppId: "",
@@ -48,7 +48,7 @@
 				//    any member of one or more organizations: use ["[orgID]"] or ["[orgID1]", "[orgID2]", ...] (Note the use of brackets in this case, e.g., ["[nzS0F0zdNLvs7nc8]"])
 				//        You can get your orgID by going to My Organization and clicking Find...The most viewed items in the organization.
 				//        Your orgID will be shown in the search box.
-				authorizedOwners: [""]
+				authorizedOwners: ["*"]
 			};
 			// Optionally sharing and proxy URLs can be configured in app/config.js. This is only required
 			//  when the webmap is not hosted on ArcGIS Online or a Portal for ArcGIS instance and the application isn't deployed as /home/MapJournal/ or /apps/MapJournal/.
